<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kermel</groupId>
    <artifactId>spring-boot-ngrok-starter-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Spring Boot ngrok Starter</name>
    <description>Spring Boot starter for seamless ngrok integration with Traffic Policy DSL, webhook auto-registration, and request inspection</description>
    <url>https://github.com/kermel/spring-boot-ngrok-starter</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <modules>
        <module>ngrok-spring-boot-autoconfigure</module>
        <module>ngrok-spring-boot-starter</module>
        <module>ngrok-traffic-policy-spring</module>
        <module>ngrok-webhook-spring</module>
        <module>ngrok-inspector-spring</module>
        <module>samples/sample-basic</module>
        <module>samples/sample-traffic-policy</module>
        <module>samples/sample-multi-tunnel</module>
        <module>samples/sample-webhook</module>
        <module>samples/sample-inspector</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.4.1</spring-boot.version>
        <java-ngrok.version>2.5.0</java-ngrok.version>
        <byte-buddy.version>1.17.5</byte-buddy.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>${byte-buddy.version}</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy-agent</artifactId>
                <version>${byte-buddy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.github.alexdlaird</groupId>
                <artifactId>java-ngrok</artifactId>
                <version>${java-ngrok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kermel</groupId>
                <artifactId>ngrok-spring-boot-autoconfigure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kermel</groupId>
                <artifactId>ngrok-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kermel</groupId>
                <artifactId>ngrok-traffic-policy-spring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kermel</groupId>
                <artifactId>ngrok-webhook-spring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kermel</groupId>
                <artifactId>ngrok-inspector-spring</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <removeUnusedImports/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                        <indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
